# Calculix-Server

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json
app/templates/email/: simulation_finished.html  test_email.html
backend/: Cargo.toml  benchmark.inp
backend/migrations/: 0001_init.sql  0002_add_active_to_users.sql  0003_create_settings.sql  0004_add_user_credits.sql  0006_adjust_credit_defaults.sql
backend/src/: main.rs
data/: app.db
data/config/: smtp.json
data/jobs/00868e1d-cf45-491c-a0a8-64b6a085824f/: model.inp
data/jobs/0de30d8a-aeb9-4c5e-b4a5-4fc877d05e76/: model.inp
data/jobs/1676fbb4-2686-4ee0-881a-6bb9b3356d29/: model.inp
data/jobs/72d9f125-4424-4a99-9d13-5f3949332f11/: model.inp
data/jobs/92872f88-1d1a-4ca3-8b87-ceec013c2a9f/: model.inp
frontend/: package-lock.json  package.json  svelte.config.js
frontend/src/: app.css
frontend/src/lib/: api.ts  types.ts
frontend/src/lib/components/: Navbar.svelte
frontend/src/routes/: +page.svelte
frontend/src/routes/admin/users/: +page.svelte
frontend/src/routes/dashboard/: +page.svelte
frontend/src/routes/login/: +page.svelte
frontend/src/routes/profile/: +page.svelte
frontend/src/routes/register/: +page.svelte
