[package]
name = "calculix_server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["multipart"] }
axum-extra = { version = "0.9", features = ["cookie"] }
argon2 = "0.5"
axum-extra = { version = "0.9", features = ["cookie"] }
argon2 = "0.5"
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9"
password-hash = { version = "0.5", features = ["rand_core"] }
rand_core = { version = "0.6", features = ["getrandom"] }
jsonwebtoken = "9"
password-hash = { version = "0.5", features = ["rand_core"] }
rand_core = { version = "0.6", features = ["getrandom"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "signal", "time", "process", "fs", "sync"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
zip = { version = "0.6", default-features = false, features = ["deflate"] }
tokio-util = { version = "0.7", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "migrate"] }
time = "0.3"
lettre = { version = "0.11", default-features = false, features = ["builder", "serde", "smtp-transport", "tokio1", "tokio1-native-tls"] }
tera = { version = "1.20" }
globset = "=0.4.14"
walkdir = "2.5"
[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
